# CO-UCAgent

./: .gitignore  404.html  Makefile  README.md  config.yaml  index.html  pyproject.toml  requirements-docs.txt  requirements.txt  res_public.csv  sitemap.xml  ucagent.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  need_help.md
.github/workflows/: build-docs.yml  release.yml
content/00_index/: index.html
docs/: mkdocs.yml  pandoc.mk
docs/content/: 00_index.md
docs/stylesheets/: extra.css
examples/ALU754/: ALU754.v  README.md  filelist.txt  ieee_add.v  ieee_comp.v  ieee_div.v  ieee_mul.v
examples/Adder/: README.md
examples/BatchRun/: Makefile  README.md
examples/CustomBackend/: README.md
examples/CustomChecker/: Makefile  README.md  joke.yaml  my_checker.py
examples/CustomTools/: Makefile  README.md  my_tools.py
examples/DualPort/: DualPort.v  DualPort_env.py  README.md
examples/FSM/: FSM.v  README.md
examples/GenSpec/: Makefile  README.md
examples/HPerfCounter/: HPerfCounter.v  (+1 more)
pandoc/: convert_md_links.lua
scripts/: mklogdir.py
search/: search_index.json
tests/: test_bash_script_checker.py  test_checker.py  test_fileops.py  test_function.py  test_mcps.py  test_nohead_loop.bash  test_parser.py  test_planning.py  test_stage.py  test_test.py  test_tools.py  test_ui.py  test_unity_env_and_bundle_checkers.py  test_unity_mock_checker.py
tools/: check_toffee_tags.py
ucagent/: __init__.py  cli.py  setting.yaml  verify_agent.py  verify_pdb.py  verify_ui.py  version.py
(+204 files in other folders)
